--- a/myblogsite/blog/static/blog/css/header.css
+++ b/myblogsite/blog/static/blog/css/header.css
@@ -1,5 +1,17 @@
-.header{
-    background-color:black;
-    border: 1px solid grey;
-    color: white;
+.navbar-custom {
+    padding-top: 0.2rem !important;
+    padding-bottom: 0.2rem !important;
+    min-height: 40px !important;
+}
+
+.navbar-custom .nav-link {
+    padding-top: 0.1rem !important;
+    padding-bottom: 0.1rem !important;
+    font-size: 0.9rem !important;
+}
+
+.navbar-custom .navbar-brand {
+    font-size: 1rem !important;
+    padding-top: 0.1rem !important;
+    padding-bottom: 0.1rem !important;
 }
