--- a/myblogsite/blog/templates/header.html
+++ b/myblogsite/blog/templates/header.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
-<html lang = "en">
-    <head>
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'css/header.css' %}">
-    </head>
-    <body>
-        <div class = "header">
-            <a href = "/">Home</a>
-            {% if user.is_authenticated %}
-                <!--<button onclick="location.href = '{% url 'profile' %}'">Profile</button>
-                <button onclick="location.href = '{% url 'logout' %}'">Log Out</button> -->
-                <a href = "/profile/">Profile</a>
-                <a href = "/login/">Logout</a>
-            {% else %}
-                <!--<button onclick="location.href = '{% url 'login' %}'">Log In</button> 
-                <button onclick="location.href = '{% url 'register' %}'">Register</button> -->
-                <a href = "/login/">Login</a>
-                <a href = "/register/">Register</a>
-            {% endif %}
+<html lang="en">
+<head>
+    {% load static %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'blog/css/header.css' %}">
+    
+</head>
+<body>
+    <nav class="navbar navbar-dark bg-dark navbar-custom">
+        <div class="container">
+            <a class="nav-link text-light" href="/">Home</a>
+            <div class="d-flex">
+                {% if user.is_authenticated %}
+                    <a class="nav-link text-light" href="/profile/">Profile</a>
+                    <a class="nav-link text-light" href="/login/">Logout</a>
+                {% else %}
+                    <a class="nav-link text-light" href="/login/">Login</a>
+                    <a class="nav-link text-light" href="/register/">Register</a>
+                {% endif %}
+            </div>
         </div>
-    </body>
+    </nav>
+</body>
 </html>
