--- a/myblogsite/blog/templates/home.html
+++ b/myblogsite/blog/templates/home.html
@@ -6,54 +6,16 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/home.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<!--{% if user.is_authenticated %}
-    <button onclick="location.href = '{% url 'profile' %}'">Profile</button>
-    <button onclick="location.href = '{% url 'logout' %}'">Log Out</button>
-{% else %}
-    <button onclick="location.href = '{% url 'login' %}'">Log In</button>
-    <button onclick="location.href = '{% url 'register' %}'">Register</button>
-{% endif %} -->
+
 {% include 'header.html' %}
-<button onclick= "location.href = '{% url 'new_post' forum_pk=forum_pk %}'">New Post</button>
+
 <div class="container">
     <div class="main-body p-0">
         <div class="inner-wrapper">
-            <div class="inner-sidebar">
-                <div class="inner-sidebar-body p-0">
-                    <div class="p-3 h-100" data-simplebar="init">
-                        <div class="simplebar-wrapper" style="margin: -16px;">
-                            <div class="simplebar-height-auto-observer-wrapper"><div class="simplebar-height-auto-observer"></div></div>
-                            <div class="simplebar-mask">
-                                <div class="simplebar-offset" style="right: 0; bottom: 0;">
-                                    <div class="simplebar-content-wrapper" style="height: 100%; overflow: hidden scroll;">
-                                        <div class="simplebar-content" style="padding: 16px;">
-                                            <nav class="nav nav-pills nav-gap-y-1 flex-column">
-                                                <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon active">All Threads</a>
-                                                <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">Popular this week</a>
-                                                <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">Popular all time</a>
-                                                <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">Solved</a>
-                                                <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">Unsolved</a>
-                                                <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">No replies yet</a>
-                                            </nav>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="simplebar-placeholder" style="width: 234px; height: 292px;"></div>
-                        </div>
-                        <div class="simplebar-track simplebar-horizontal" style="visibility: hidden;"><div class="simplebar-scrollbar" style="width: 0; display: none;"></div></div>
-                        <div class="simplebar-track simplebar-vertical" style="visibility: visible;"><div class="simplebar-scrollbar" style="height: 151px; display: block; transform: translate3d(0px, 0px, 0px);"></div></div>
-                    </div>
-                </div>
-            </div>
-
-
+            {% include 'sidebar.html' %}
+          
             <div class="inner-main">
                 <div class="inner-main-header">
                     <a class="nav-link nav-icon rounded-circle nav-link-faded mr-3 d-md-none" href="#" data-toggle="inner-sidebar">
@@ -67,9 +29,12 @@
                             <option value="3">No Replies Yet</option>
                         </select>
                     </label>
+                    <button type="button" class="btn btn-dark" onclick= "location.href = '{% url 'new_post' forum_pk=forum_pk %}'">New Post</button>
                     <span class="input-icon input-icon-sm ml-auto w-auto">
                         <input type="text" class="form-control form-control-sm bg-gray-200 border-gray-200 shadow-none mb-4 mt-4" placeholder="Search forum" />
-                    </span>
+                    </span> <!-- butngi button -->
+                    
+
                 </div>
 
 
