--- a/myblogsite/blog/templates/edit_comment.html
+++ b/myblogsite/blog/templates/edit_comment.html
@@ -5,6 +5,7 @@
     <title>Edit Comment</title>
 </head>
 <body>
+    {% include 'header.html' %}
     <h1>Current Comment Here</h1>
 
     {{ comment.content }}
