--- a/myblogsite/blog/templates/profile.html
+++ b/myblogsite/blog/templates/profile.html
@@ -2,15 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'blog/css/profile.css' %}">
+    <style>
+        .profile-container {
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: center;
+        padding: 20px;
+    }
+
+    .profile-img {
+        max-width: 200px;
+        max-height: 200px;
+        border-radius: 50%; 
+        margin-bottom: 20px;
+    }
+
+    .profile-info h5 {
+        margin: 10px 0;
+    }
+
+    h2 {
+        margin-bottom: 30px;
+    }
+    </style>
+    
 </head>
 <body>
     {% include 'header.html' %}
-
-<h2>Profile</h2>
-<img src="{{ picture }}" style="max-width: 700px; max-height: 700px;">
-<h5>Username: <i>{{ username }}</i></h5>
-{#TODO Include password and editable profile#}
-<h5>Is Staff: <i>{{ is_staff }}</i></h5>
+    <div class="profile-container">
+        <h2>Profile</h2>
+        <img src="{{ picture }}" alt="Profile Picture" class="profile-img">
+        
+        <div class="profile-info">
+            <h5>Username: <i>{{ username }}</i></h5>
+            <h5>Is Staff: <i>{{ is_staff }}</i></h5>
+        </div>
+    </div>
 </body>
 </html>
