--- a/myblogsite/blog/static/blog/css/profile.css
+++ b/myblogsite/blog/static/blog/css/profile.css
@@ -1,21 +1,22 @@
+
 .profile-container {
-    max-width: 600px;
-    margin: 0 auto;
-    text-align: center;
-    padding: 20px;
+max-width: 600px;
+margin: 0 auto;
+text-align: center;
+padding: 20px;
 }
 
-.profile-img {
-    max-width: 200px;
-    max-height: 200px;
-    border-radius: 50%; 
-    margin-bottom: 20px;
+.profile-pic {
+max-width: 300px;
+max-height: 300px;
+border-radius: 50%; 
+margin-bottom: 20px;
 }
 
 .profile-info h5 {
-    margin: 10px 0;
+margin: 10px 0;
 }
 
 h2 {
-    margin-bottom: 30px;
+margin-bottom: 30px;
 }
