--- a/myblogsite/blog/templates/forum.html
+++ b/myblogsite/blog/templates/forum.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Forum</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
 </head>
 <body>
     <h1>Forums</h1>
