--- a/myblogsite/blog/templates/post_detail.html
+++ b/myblogsite/blog/templates/post_detail.html
@@ -7,7 +7,7 @@
     
     {% load static %}
     <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
-    <link rel="stylesheet" href="{% static 'blog/css/home.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/css/post_detail.css' %}">
    
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -30,12 +30,14 @@
                     <h5 style="display: inline;">by {{ post.user_ref.username }}</h4>
                     <span><p style="display: inline"> {{ post.created_at }}</p></span>
                     <br>
-                    <p>{{ post.content }}</p>
-                    {% if post.image %}
-                        <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 700px; max-height: 700px;">
-                    {% endif %}
-                    <p id="post_upvote">Upvote: {{ post_upvotes }}</h5>
-                    <p id="post_downvote">Downvote: {{ post_downvotes }}</h5>
+                    <div class = "post-content">
+                        <p>{{ post.content }}</p>
+                        {% if post.image %}
+                            <img src="{{ post.image.url }}" alt="{{ post.title }}" style="max-width: 300px; max-height: 300px;">
+                        {% endif %}
+                    </div>
+                    <p id="post_upvote" style = "cursor:pointer;">Upvote: {{ post_upvotes }}</h5>
+                    <p id="post_downvote" style = "cursor:pointer;">Downvote: {{ post_downvotes }}</h5>
 
                     <div class = "update-delete-buttons">
 
@@ -62,7 +64,7 @@
                                     <div>{{ comment.created_at }}</div>
                                     <p>{{ comment.content }}</p>
                                     {% if comment.image %}
-                                        <img src="/media/{{ comment.image }}" style="max-width: 700px; max-height: 700px;" alt="{{ comment.title }}">
+                                        <img src="/media/{{ comment.image }}" style="max-width: 300px; max-height: 300px;" alt="{{ comment.title }}">
                                     {% endif %}
 
                                     {% if user.id == comment.user_ref__id %}
@@ -77,15 +79,16 @@
                             </div>
                         {% endfor %}
                     </div>
-
-                    {% if user.is_authenticated %}
-                        <form action="" method="post" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {{ form.non_field_errors }}
-                            {{ form.as_p }}
-                            <button type="submit">Submit</button>
-                        </form>
-                    {% endif %}
+                    <div class = "create-comment">
+                        {% if user.is_authenticated %}
+                            <form action="" method="post" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {{ form.non_field_errors }}
+                                {{ form.as_p }}
+                                <button type="submit" class="btn btn-dark">Submit</button>
+                            </form>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
             
