--- a/myblogsite/blog/templates/profile.html
+++ b/myblogsite/blog/templates/profile.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 
     {% load static %}
+    <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/profile.css' %}">
     <style>
         .profile-container {
@@ -16,9 +17,9 @@
         padding: 20px;
     }
 
-    .profile-img {
-        max-width: 200px;
-        max-height: 200px;
+    .profile-pic {
+        max-width: 300px;
+        max-height: 300px;
         border-radius: 50%; 
         margin-bottom: 20px;
     }
@@ -37,7 +38,7 @@
     {% include 'header.html' %}
     <div class="profile-container">
         <h2>Profile</h2>
-        <img src="{{ picture }}" alt="Profile Picture" class="profile-img">
+        <img src="{{ picture }}" alt="Profile Picture" class="profile-pic">
         
         <div class="profile-info">
             <h5>Username: <i>{{ username }}</i></h5>
