--- a/myblogsite/blog/templates/sidebar.html
+++ b/myblogsite/blog/templates/sidebar.html
@@ -5,6 +5,138 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
        <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
+       <style>
+        .inner-wrapper {
+            position: relative;
+            height: calc(100vh - 3.5rem);
+            transition: transform 0.3s;
+        }
+
+        .sticky-navbar .inner-wrapper {
+            height: calc(100vh - 3.5rem - 48px);
+        }
+
+        .inner-main,
+        .inner-sidebar {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            display: flex;
+            flex-direction: column;
+        }
+        .inner-sidebar {
+            left: 0;
+            width: 235px;
+            border-right: 1px solid #cbd5e0;
+            background-color: #fff;
+            z-index: 1;
+        }
+        .inner-main {
+            right: 0;
+            left: 235px;
+        }
+        .inner-main-footer,
+        .inner-main-header,
+        .inner-sidebar-footer,
+        .inner-sidebar-header {
+            height: 3.5rem;
+            border-bottom: 1px solid #cbd5e0;
+            display: flex;
+            align-items: center;
+            padding: 0 1rem;
+            flex-shrink: 0;
+        }
+        .inner-main-body,
+        .inner-sidebar-body {
+            padding: 1rem;
+            overflow-y: auto;
+            position: relative;
+            flex: 1 1 auto;
+        }
+
+        .inner-main-body .sticky-top,
+        .inner-sidebar-body .sticky-top {
+            z-index: 999;
+        }
+        .inner-main-footer,
+        .inner-main-header {
+            background-color: #fff;
+        }
+        .inner-main-footer,
+        .inner-sidebar-footer {
+            border-top: 1px solid #cbd5e0;
+            border-bottom: 0;
+            height: auto;
+            min-height: 3.5rem;
+        }
+
+        .inner-sidebar {
+            left: -235px;
+        }
+        .inner-main {
+            left: 0;
+            width: 100%;
+        }
+        .inner-expand .main-body {
+            /*overflow: hidden;*/
+        }
+        .inner-expand .inner-wrapper {
+            transform: translate3d(235px, 0, 0);
+        }
+
+        .nav .show>.nav-link.nav-link-faded, .nav-link.nav-link-faded.active, .nav-link.nav-link-faded:active,
+        .nav-pills .nav-link.nav-link-faded.active, .navbar-nav .show>.nav-link.nav-link-faded {
+            color: #3367b5;
+            background-color: #c9d8f0;
+        }
+
+        .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+            color: #fff;
+            background-color: #467bcb;
+        }
+        .nav-link.has-icon {
+            display: flex;
+            align-items: center;
+        }
+        .nav-link.active {
+            color: #467bcb;
+        }
+        .nav-pills .nav-link {
+            border-radius: .25rem;
+        }
+        .nav-link {
+            color: #4a5568;
+        }
+        .card {
+            box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+        }
+
+        .card {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            min-width: 0;
+            word-wrap: break-word;
+            background-color: #fff;
+            background-clip: border-box;
+            border: 0 solid rgba(0,0,0,.125);
+            border-radius: .25rem;
+            width: 100%;
+        }
+
+        .card-body {
+            flex: 1 1 auto;
+            min-height: 1px;
+            padding: 1rem;
+            width: 100%;
+        }
+
+        .container {
+            margin-top: 2%;
+            width: 100%;
+        }
+       </style>
     </head>
     <body>
         <div class="inner-sidebar">
