--- a/myblogsite/blog/templates/header.html
+++ b/myblogsite/blog/templates/header.html
@@ -5,20 +5,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'blog/css/global.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/header.css' %}">
-    
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-custom">
-        <div class="container">
-            <a class="nav-link text-light" href="/">Home</a>
-            <div class="d-flex">
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="d-flex align-items-center">
+                <img src="{% static 'images/logo.png' %}" alt="Logo" style="max-height:30px;">
+                <a class="nav-link text-light ml-3" href="/">Home</a> 
+            </div>
+            <div class="d-flex align-items-center">
                 {% if user.is_authenticated %}
-                    <img src="{{ user.picture.url }}" class="profile-img" style = "height:30px;width:30px;border-radius:50%;">
-                    <a class="nav-link text-light" href="/profile/">Profile</a>
-                    <a class="nav-link text-light" href="/login/">Logout</a>
+                    <img src="{{ user.picture.url }}" alt="Profile Picture" class="profile-img" style="height:30px;width:30px;border-radius:50%;">
+                    <a class="nav-link text-light ml-2" href="/profile/">Profile</a>
+                    <a class="nav-link text-light ml-2" href="/login/">Logout</a>
                 {% else %}
                     <a class="nav-link text-light" href="/login/">Login</a>
-                    <a class="nav-link text-light" href="/register/">Register</a>
+                    <a class="nav-link text-light ml-2" href="/register/">Register</a>
                 {% endif %}
             </div>
         </div>
