--- a/myblogsite/blog/templates/sidebar.html
+++ b/myblogsite/blog/templates/sidebar.html
@@ -155,6 +155,7 @@
                                             <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">Solved</a>
                                             <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">Unsolved</a>
                                             <a href="javascript:void(0)" class="nav-link nav-link-faded has-icon">No replies yet</a>
+                                            <a href="/Category/" class="nav-link nav-link-faded has-icon">Browse By Category</a>
                                         </nav>
                                     </div>
                                 </div>
