Working Post Count
Post from user will now display correct.

--- a/myblogsite/blog/templates/Profile/profile_count.html
+++ b/myblogsite/blog/templates/Profile/profile_count.html
@@ -13,7 +13,7 @@
                     <h5 class="card-title">Total Posts</h5>
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">0</h5>
+                    <h5 class="card-title">{{ user_posts.count }}</h5>
                 </div>
             </div>
         </div>
