--- a/myblogsite/blog/templates/Profile/profile_count.html
+++ b/myblogsite/blog/templates/Profile/profile_count.html
@@ -26,7 +26,7 @@
                     <h5 class="card-title">Total Comment</h5>
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">0</h5>
+                    <h5 class="card-title">{{ user_comments.count }}</h5>
                 </div>
             </div>
         </div>
