--- a/myblogsite/blog/templates/Profile/profile_test.html
+++ b/myblogsite/blog/templates/Profile/profile_test.html
@@ -3,20 +3,20 @@
         <h5>Favorite Posts</h5>
         <hr>
         {% for favorite in user_favorites %}
-        <div class="card mb-2">
-            <div class="card-body p-2 p-sm-3">
-                <div class="media forum-item">
-                    <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User" /></a>
-                    <div class="media-body align-self-center">
-                        <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{favorite.post_ref__title}}</a></h6>
-                    </div>
-                    <div class="text-muted small text-center align-self-center">
-                        <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
-                        <span><i class="far fa-comment ml-2"></i> 3</span>
+            <div class="card mb-2">
+                <div class="card-body p-2 p-sm-3">
+                    <div class="media forum-item">
+                        <a href="#" data-toggle="collapse" data-target=".forum-content"><img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="mr-3 rounded-circle" width="50" alt="User" /></a>
+                        <div class="media-body align-self-center">
+                            <h6><a href="#" data-toggle="collapse" data-target=".forum-content" class="text-body">{{ favorite.user_post_ref.post_ref.title }}</a></h6>
+                        </div>
+                        <div class="text-muted small text-center align-self-center">
+                            <span class="d-none d-sm-inline-block"><i class="far fa-eye"></i> 19</span>
+                            <span><i class="far fa-comment ml-2"></i> 3</span>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         {% endfor %}
     </div>
 </div>
